# mod_depends

./: .autotools  .cproject  .cvsignore  .project  Makefile.am  autogen.sh  configure.ac
include/: .cvsignore  .gitignore
src/: .cvsignore  Makefile.am  Makefile.in
